--- a/styles.css
+++ b/styles.css
@@ -17,3 +17,8 @@ main {
     text-align: center;
     margin-top: 50px;
 }
+.description { 
+    width: 100%; 
+    text-align: center;
+    margin-top: 30px;
+}
