--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,12 @@ main {
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
+    font-size: 0.9rem;
+    margin-top: 30px;
+}
+header { 
+    width: 100%; 
+    text-align: center;
 }
 .logo { 
     width: 100%; 
@@ -21,4 +27,18 @@ main {
     width: 100%; 
     text-align: center;
     margin-top: 30px;
+}
+table { 
+    width: 100%; 
+    border-collapse: collapse;
+}
+td { 
+    border: solid 1px lightgray;
+    padding: 10px;
+}
+th { 
+    text-align: left; 
+    padding: 5px;
+    background: #eee;
+    border: solid 1px lightgray;
 }
